<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.entur.ror</groupId>
        <artifactId>superpom</artifactId>
        <version>6.4.0</version>
    </parent>
    <groupId>org.rutebanken.sobek</groupId>
    <artifactId>sobek-parent</artifactId>
    <version>1.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Sobek</name>
    <description>Vehicle register / materiellregister</description>


    <modules>
        <module>sobek-model</module>
        <module>sobek-common</module>
        <module>sobek-repository</module>
        <module>sobek-service</module>
        <module>sobek-app</module>
    </modules>

    <licenses>
        <license>
            <name>EUPL-1.2 with modifications</name>
            <url>https://joinup.ec.europa.eu/software/page/eupl</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>Entur AS</name>
        <url>http://www.entur.org/</url>
    </organization>

    <scm>
        <connection>scm:git:ssh://git@github.com:entur/sobek.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:entur/sobek.git</developerConnection>
    </scm>

    <properties>
        <java.version>21</java.version>
        <spring-cloud-gcp.version>8.0.2</spring-cloud-gcp.version>
        <geotools.version>34.3</geotools.version>
        <graphql-java.version>25.0</graphql-java.version>
        <graphql-java-extended-scalars.version>24.0</graphql-java-extended-scalars.version>
        <swagger-jersey2.version>2.2.48</swagger-jersey2.version>
        <netex-java-model.version>3.0.0-SNAPSHOT</netex-java-model.version>
        <entur.helpers.version>7.1.0</entur.helpers.version>
        <jts-core.version>1.20.0</jts-core.version>
        <groovy-all.version>4.0.28</groovy-all.version>
        <rest-assured.version>6.0.0</rest-assured.version>
        <!-- Dependency versions -->
        <postgis.version>2.5.1</postgis.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <spring-cloud-aws-secrets-manager.version>4.0.1</spring-cloud-aws-secrets-manager.version>
    </properties>

    <repositories>
        <repository>
            <id>central2</id>
            <name>Check central first to avoid a lot of not found warnings</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>osgeo</id>
            <name>Open Source Geospatial Foundation Repository</name>
            <url>https://repo.osgeo.org/repository/release/</url>
        </repository>
        <repository>
            <id>maven-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>org.rutebanken.sobek</groupId>
                <artifactId>sobek-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.rutebanken.sobek</groupId>
                <artifactId>sobek-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.rutebanken.sobek</groupId>
                <artifactId>sobek-repository</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.rutebanken.sobek</groupId>
                <artifactId>sobek-service</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- PostGIS - database driver -->
            <dependency>
                <groupId>net.postgis</groupId>
                <artifactId>postgis-jdbc</artifactId>
                <version>${postgis.version}</version>
            </dependency>

            <!-- NeTEx Java Model -->
            <dependency>
                <groupId>org.entur</groupId>
                <artifactId>netex-java-model</artifactId>
                <version>${netex-java-model.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>2.0.5</version> <!-- Use latest stable version -->
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <!-- IMPORTANT: Lombok must come BEFORE MapStruct -->
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </path>
                            <!-- MapStruct processor -->
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                            <!-- Binding for Lombok + MapStruct -->
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                                <version>${lombok-mapstruct-binding.version}</version>
                            </path>
                        </annotationProcessorPaths>
                        <compilerArgs>
                            <arg>-Amapstruct.defaultComponentModel=spring</arg>
                            <arg>-Amapstruct.unmappedTargetPolicy=WARN</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>